AC_PREREQ([2.69])
AC_INIT([hello], [1.0], [lopesivan.ufrj@gmail.com])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Verificações para compiladores e ferramentas
AC_PROG_CC
AM_PROG_CC_C_O

AC_CONFIG_SRCDIR([src/main.c])

# Onde colocar os arquivos gerados
AC_CONFIG_FILES([Makefile
				 src/Makefile])

AC_OUTPUT
